0.4. BufferedOutputStream [#252490 #351185]